[redis] - setter, getter, delete data
